# k10s

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  RELEASING.md  STEERING.md  go.mod  go.sum  roadmap.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  release.yaml  update-demo-gif.yaml
assets/: demo-dark.tape  demo-light.tape
cmd/k10s/: logging.go  main.go
deployments/: kind.yaml
docs/: architecture.md  data-sources.md  feedback.md  go-parity.md  known-issues.md  node-gpu-metrics.md  roadmap.md  views.md
examples/plugin/: .gitignore  README.md  simple_plugin.go
internal/config/: config.go  keybindings.go  legacy.go
internal/game/: collectible.go  constants.go  kitten.go  level.go  platform.go  platformer.go
internal/k8s/: client.go  client_test.go  disconnected.go  gpu.go  gpu_test.go  logs.go  pod_status.go  resources.go  utils.go
internal/log/: logger.go
internal/plugins/: README.md  plugin.go  plugin_test.go
internal/tui/: catnip.go  (+20 more)
src/: action.rs  app.rs  lib.rs  main.rs  msg.rs
src/crates/kitty/: Cargo.toml
src/crates/kitty/src/: cgroup.rs  collector.rs  config.rs  emitter.rs  engine.rs  error.rs  main.rs  sample.rs
src/crates/kitty/src/collectors/: gpu.rs  mod.rs  network.rs  process.rs  system.rs
src/crates/kitty/src/emitters/: prometheus.rs
src/crates/kitty/src/gpu/: mod.rs  nvidia.rs
tests/: render_snapshot.rs
(+44 files in other folders)
