[package]
name = "kitty"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
nvml-wrapper = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
nix = { version = "0.29", features = ["fs"] }
axum = "0.8"
parking_lot = "0.12"
